test/tests/compiler/13_floating-point_numbers/invalid_lex/plx1_invalid_exponent.plx
pub fn main(none) i32 {
    return 42.4E+3
}
